refactor:remove Profile apis
